
    <resources>
        <string name="app_name">RPNCalc</string>
        <string name="test_Helper">Test Helper</string>
        <string name="test_controller">Test Controller</string>
        <string name="back_space"><![CDATA[<]]></string>
        <string name="_8">8</string>
        <string name="_9">9</string>
        <string name="muli">*</string>
        <string name="_4">4</string>
        <string name="_5">5</string>
        <string name="_6">6</string>
        <string name="subtract">-</string>
        <string name="_1">1</string>
        <string name="_2">2</string>
        <string name="_3">3</string>
        <string name="add">+</string>
        <string name="_0">0</string>
        <string name="decimal">.</string>
        <string name="tau">τ</string>
        <string name="pi">π</string>
        <string name="divide">/</string>
        <string name="posNeg">+/-</string>
        <string name="enter">^</string>
        <string name="_7">7</string>
    </resources>
