<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:background="#292B29"
    android:orientation="vertical"
    android:weightSum="6"
    tools:context=".RPNCalcActivity"
    >

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adMobBanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="SMART_BANNER"
        android:layout_marginBottom="5dp"
        ads:adUnitId="ca-app-pub-7542723422099323/2733512304"/>

    <EditText
        android:id="@+id/screen"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="30dp"
        android:layout_weight=".5"
        android:autofillHints=""
        android:background="#9DFFD4"
        android:gravity="end"
        android:inputType="number"
        android:padding="5dp"
        android:textColor="#0000ff"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4">

        <Button
            android:id="@+id/delete"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/purple_500"
            android:onClick="buttonClick"
            android:text="@string/back_space"
            android:textSize="15sp" />

        <Button
            android:id="@+id/enter"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/purple_500"
            android:onClick="buttonClick"
            android:text="@string/enter"
            android:textColor="#000000"
            android:textSize="35sp" />

        <Button
            android:id="@+id/posNeg"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/purple_500"
            android:onClick="buttonClick"
            android:text="@string/posNeg"
            android:textColor="#000000"
            android:textSize="30sp" />


        <Button
            android:id="@+id/div"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/purple_500"
            android:onClick="buttonClick"
            android:text="@string/divide"
            android:textColor="#000000"
            android:textSize="30sp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4">

        <Button
            android:id="@+id/seven"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/purple_500"
            android:onClick="buttonClick"
            android:text="@string/_7"
            android:textColor="#000000"
            android:textSize="30sp" />

        <Button
            android:id="@+id/eight"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/purple_500"
            android:onClick="buttonClick"
            android:text="@string/_8"
            android:textColor="#000000"
            android:textSize="30sp" />

        <Button
            android:id="@+id/nine"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/purple_500"
            android:onClick="buttonClick"
            android:text="@string/_9"
            android:textColor="#000000"
            android:textSize="30sp" />

        <Button
            android:id="@+id/mul"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/purple_500"
            android:onClick="buttonClick"
            android:text="@string/muli"
            android:textColor="#000000"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4">

        <Button
            android:id="@+id/four"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/purple_500"
            android:onClick="buttonClick"
            android:text="@string/_4"
            android:textColor="#000000"
            android:textSize="30sp" />

        <Button
            android:id="@+id/five"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/purple_500"
            android:onClick="buttonClick"
            android:text="@string/_5"
            android:textColor="#000000"
            android:textSize="30sp" />

        <Button
            android:id="@+id/six"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/purple_500"
            android:onClick="buttonClick"
            android:text="@string/_6"
            android:textColor="#000000"
            android:textSize="30sp" />

        <Button
            android:id="@+id/min"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/purple_500"
            android:onClick="buttonClick"
            android:text="@string/subtract"
            android:textColor="#000000"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4">

        <Button
            android:id="@+id/one"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/purple_500"
            android:onClick="buttonClick"
            android:text="@string/_1"
            android:textColor="#000000"
            android:textSize="30sp" />

        <Button
            android:id="@+id/two"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/purple_500"
            android:onClick="buttonClick"
            android:text="@string/_2"
            android:textColor="#000000"
            android:textSize="30sp" />

        <Button
            android:id="@+id/three"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/purple_500"
            android:onClick="buttonClick"
            android:text="@string/_3"
            android:textColor="#000000"
            android:textSize="30sp" />

        <Button
            android:id="@+id/plus"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/purple_500"
            android:onClick="buttonClick"
            android:text="@string/add"
            android:textColor="#000000"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/zero"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/purple_500"
            android:onClick="buttonClick"
            android:text="@string/_0"
            android:textColor="#000000"
            android:textSize="30sp" />

        <Button
            android:id="@+id/point"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/purple_500"
            android:onClick="buttonClick"
            android:text="@string/decimal"
            android:textColor="#000000"
            android:textSize="30sp" />

        <Button
            android:id="@+id/tau"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/purple_500"
            android:onClick="buttonClick"
            android:text="@string/tau"
            android:textColor="#000000"
            android:textSize="30sp" />

        <Button
            android:id="@+id/pi"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/purple_500"
            android:onClick="buttonClick"
            android:text="@string/pi"
            android:textColor="#000000"
            android:textSize="30sp" />

    </LinearLayout>
</LinearLayout>

